@@ -1,5 +1,6 @@
 # KNOWLEDGE
 botania.knowledge.extra=&3Extra&7 Knowledge
+botaniamisc.knowledgeUnlock=The Blank Card is unusually shining, the Lexicon which you are holding is injected with a mystery energy.
 
 # ITEMGROUP
 itemGroup.ExtraBotany=ExtraBotany
