@@ -1,5 +1,6 @@
 # KNOWLEDGE
 botania.knowledge.extra=&3额外&7的知识
+botaniamisc.knowledgeUnlock=白卡闪耀着异样的光芒,你手中的手册被注入了神秘的力量.
 
 # ITEMGROUP
 itemGroup.ExtraBotany=额外植物学
